<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvShowAppCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorOrangeDark"
        android:hint="@string/user">
    </TextView>

    <TextView
        android:id="@+id/tvShowUserCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textColor="@color/colorOrangeDark"
        android:hint="@string/user">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/style_edit_text"
            android:gravity="center|end"
            android:hint="0"
            android:maxLength="14"
            android:padding="10dp"
            android:textColor="@color/colorOrangeDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btAlCuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/alCuadrado"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/btAlCubo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/alCubo"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/btFactorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/factorial"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/btSumatoriaN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sumatoriaN"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/numero1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/bt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/numero2"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/numero3"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/numero4"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/bt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingHorizontal="20dp"
            android:text="@string/numero0"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/btShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingHorizontal="30dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/shift"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/style_button"/>
        <Button
            android:id="@+id/btClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:textSize="20sp"
            android:text="@string/btClean"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btSumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sumar"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/btRestar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/rest"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/btMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/multi"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/btDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/div"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_button">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/btEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/equal"
        android:textColor="@color/colorWhite"
        android:background="@drawable/style_button">
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_button"
            android:paddingHorizontal="20dp"
            android:text="@string/close"
            android:textColor="@color/colorWhite"
            android:textSize="20sp">

        </Button>
    </LinearLayout>

</LinearLayout>