<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".Onboarding.WelcomeFragment">

    <ImageView
        android:id="@+id/imgWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="-150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img2" />

    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/title2"
        android:textColor="@color/colorOrangeDark"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textDesc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:paddingHorizontal="50dp"
        android:gravity="center"
        android:text="@string/desc2"
        android:textColor="@color/colorOrangeLight"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:paddingHorizontal="50dp"
        android:gravity="center"
        android:text="@string/gestion"
        android:textColor="@color/colorOrangeLight"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layoutNextWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSkip"
            android:layout_width="120dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="2dp"
            android:text="@string/skip"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"
            android:background="@drawable/style_button">
        </Button>

        <TextView
            android:id="@+id/tvNextStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:clickable="true"
            android:textStyle="bold"
            android:focusable="true"
            android:fontFamily="monospace"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="@color/colorOrangeDark"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>