<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical"
    tools:context=".Onboarding.WelcomeFragment">

    <ImageView
        android:id="@+id/imgWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="-250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img3" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:id="@+id/textTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:fontFamily="monospace"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/basica"
            android:textColor="@color/colorOrangeDark"
            android:textSize="18sp" />
        <Button
            android:id="@+id/buttonDescriptionBasica"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:layout_marginLeft="54dp"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/buttonSelectBasica"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:background="@drawable/style_button">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:fontFamily="monospace"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/cientifica"
            android:textColor="@color/colorOrangeDark"
            android:textSize="18sp" />
        <Button
            android:id="@+id/buttonDescriptionScientific"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/buttonSelectScientific"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:background="@drawable/style_button">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:fontFamily="monospace"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/custom"
            android:textColor="@color/colorOrangeDark"
            android:textSize="18sp" />
        <Button
            android:id="@+id/buttonDescriptionCustom"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:layout_marginLeft="43dp"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:background="@drawable/style_button">
        </Button>
        <Button
            android:id="@+id/buttonSelectCustom"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:background="@drawable/style_button">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/etSelectApp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/selectApp"
            android:fontFamily="monospace"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@drawable/style_edit_text">
        </EditText>
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/user"
            android:fontFamily="monospace"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@drawable/style_edit_text">
        </EditText>

        <Button
            android:id="@+id/buttonIngresar"
            android:layout_width="220dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/ingre"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="@drawable/style_button">
        </Button>

    </LinearLayout>


</LinearLayout>